deriving-310/tests/rejected/polyrec.ml
(* non-regular datatype *) 

type 'a seq = Nil | Cons of 'a * ('a * 'a) seq
  deriving (Eq)
